# catfacts

./: .gitignore  README.md  com.github.linuxhubit.catfacts.yml  meson.build
.github/workflows/: elementary.yml
data/: com.github.linuxhubit.catfacts.appdata.xml.in  com.github.linuxhubit.catfacts.desktop.in
debian/: changelog  control  files
debian/.debhelper/com.github.linuxhubit.shouldidoit/: dbgsym-build-ids
debian/.debhelper/com.github.linuxhubit.shouldidoit/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/com.github.linuxhubit.shouldidoit/dbgsym-root/usr/share/doc/: com.github.linuxhubit.shouldidoit-dbgsym
po/: POTFILES  com.github.linuxhubit.catfacts.pot  com.github.linuxhubit.gitscover.pot  com.github.linuxhubit.shouldidoit.pot  fr.po  it.mo  it.po  nl.po  pt.po  tr.po
po/extra/: POTFILES  extra.pot  fr.po  nl.po  pt.po  tr.po
src/: Application.vala  Constants.vala  MainWindow.vala  meson.build
